--- a/templates/courrier/received.html.twig
+++ b/templates/courrier/received.html.twig
@@ -2,7 +2,6 @@
 
 {% block title %}Boites de réceptions{% endblock %}
 {% block navbar %}
-
     <header>
 
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -65,6 +64,7 @@
                                     </a>
                                 {% endif %}
                             {% endfor %}
+
                         {% endif %}
 
 
@@ -117,7 +117,7 @@
             <div class="col-12 justify-content-center">
                 <div class="card card-trap"><div class="card-header">  <h1>Boites de receptions</h1></div>
                     <div class="card-body">
-                        <p>Total Courrier: {{ app.user.received|length }} </p>
+                        <p>Total Courrier: {{ app.user.received|filter(courrier => courrier.isVerify == true)|length  }} </p>
                         <table class="table table-striped table-bordered table_data">
                             <thead>
                             <tr>
@@ -132,40 +132,48 @@
                             </tr>
                             </thead>
                             <tbody>
-                            {% for courrier in app.user.received|reverse %}
-                                {% set bold = "" %}
-                                {% if courrier.isRead == 0 %}
-                                    {% set bold ="font-weight-bold" %}
-                                {% endif %}
-                            <tr>
-                                <td class="{{bold}}">{{ courrier.sender.Nom }}</td>
-                                <td class="{{bold}}">{{ courrier.sender.email }}</td>
-                                <td class="{{bold}}">{{ courrier.nomC }}</td>
-                                <td class="{{bold}}">
-                                    {% if courrier.status == "TRES URGENT" %}
-                                    <span style="background-color: #D31C1C; padding: 7px; border-radius: 50px; color:#fff;"> {{ courrier.status }} </span>
-                                    {% elseif courrier.status == "URGENT" %}
-                                        <span style="background-color: #DCD61E; padding: 7px; border-radius: 50px; color:#fff;"> {{ courrier.status }} </span>
+                            {% for courrier in app.user.received|reverse|filter(courrier => courrier.isVerify == true) %} {# test si courrier vérifier#}
 
-                                        {% else %}
-                                            <span style="background-color: #28A2E8; padding: 7px; border-radius: 50px; color:#fff;"> {{ courrier.status }} </span>
+                                    {% set bold = "" %}
+                                    {% if courrier.isRead == 0 %}
+                                        {% set bold ="font-weight-bold" %}
                                     {% endif %}
-                                </td>
-                                <td class="{{bold}}"><div>{{ courrier.notes() }}</div></td>
-                                <td class="{{bold}}">{{ courrier.fichier }}</td>
-                                <td class="{{bold}}">{{ courrier.createdAt|date}}</td>
-                                {#|date("m/d/Y")#}
-                                <td>
-                                    <a href="{{ path("excel", {id: courrier.id}) }}" class="btn btn-info">Voir</a>
-                                    {% set files = courrier.fichier|split('/')%}
-                                    {% set lfiles = files|length - 1 %}
-                                    <a href="{{asset('Courrier/'~ files[lfiles]) }}" class="btn btn-dark">Telecharger</a>
-                                </td>
+                                    <tr>
+                                        <td class="{{bold}}">{{ courrier.sender.Nom }}</td>
+                                        <td class="{{bold}}">{{ courrier.sender.email }}</td>
+                                        <td class="{{bold}}">{{ courrier.nomC }}</td>
+                                        <td class="{{bold}}">
+                                            {% if courrier.status == "TRES URGENT" %}
+                                            <span style="background-color: #D31C1C; padding: 7px; border-radius: 50px; color:#fff;"> {{ courrier.status }} </span>
+                                            {% elseif courrier.status == "URGENT" %}
+                                                <span style="background-color: #DCD61E; padding: 7px; border-radius: 50px; color:#fff;"> {{ courrier.status }} </span>
+
+                                                {% else %}
+                                                    <span style="background-color: #28A2E8; padding: 7px; border-radius: 50px; color:#fff;"> {{ courrier.status }} </span>
+                                            {% endif %}
+                                    </td>
+                                    <td class="{{bold}}"><div>{{ courrier.notes() }}</div></td>
+                                    <td class="{{bold}}">{{ courrier.fichier }}</td>
+                                    <td class="{{bold}}">{{ courrier.createdAt|date}}</td>
+                                    {#|date("m/d/Y")#}
+                                    <td>
+                                        <a href="{{ path("excel", {id: courrier.id}) }}" class="btn btn-info">Voir</a>
+                                        {% set files = courrier.fichier|split('/')%}
+                                        {% set lfiles = files|length - 1 %}
+                                        <a href="{{asset('Courrier/'~ files[lfiles]) }}" class="btn btn-dark">Telecharger</a>
+                                    </td>
+                                 {#<td>
+                                     <img src="{{ asset('assets/svg/Checked.svg') }}" style="">
+
+                                </td>   #}
                             </tr>
+
+
+
                             {% else %}
-                                <tr>
-                                    <td colspan="10">Aucun courrier reçus</td>
-                                </tr>
+                                    <tr>
+                                        <td colspan="10">Aucun courrier reçus</td>
+                                    </tr>
                             {% endfor %}
                             </tbody>
                         </table>
