--- a/templates/courrier/secondV.html.twig
+++ b/templates/courrier/secondV.html.twig
@@ -34,7 +34,7 @@
                         {% if i == 0 %}
                             <span class="badge rounded-pill badge-notification bg-danger badge badge-danger badge-counter d-none ">  {{ i }}</span>
                         {% else %}
-                            <span class="badge rounded-pill badge-notification bg-danger badge badge-danger badge-counter ">  {{ i }}</span>
+                            <span class="badge rounded-pill badge-notification bg-danger badge badge-danger badge-counter "></span>
                         {% endif %}
                         {# fin #}
                     </a>
@@ -129,7 +129,7 @@
             <th>prenom</th>
             <th>numero</th>
            {# <th>Valide 1</th> #}
-            <th>Valide 2</th>
+            <th>Valide</th>
         </tr>
     <tbody>
 
