--- a/templates/user/index.html.twig
+++ b/templates/user/index.html.twig
@@ -33,7 +33,7 @@
                         {% if i == 0 %}
                             <span class="badge rounded-pill badge-notification bg-danger badge badge-danger badge-counter d-none ">  {{ i }}</span>
                         {% else %}
-                            <span class="badge rounded-pill badge-notification bg-danger badge badge-danger badge-counter ">  {{ i }}</span>
+                            <span class="badge rounded-pill badge-notification bg-danger badge badge-danger badge-counter "></span>
                         {% endif %}
                         {# fin #}
                     </a>
