--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -20,6 +20,8 @@
             <script type="text/javascript" src={{asset('assets/datatables/dataTables.bootstrap4.min.js') }}></script>
             <script type="text/javascript" src={{asset('assets/js/script.js') }}></script>
             <script type="text/javascript" src={{asset('assets/js/bootstrap.min.js') }}></script>
+              <script src={{asset('assets/js/bootbox.js') }}></script>
+             <script src={{asset('assets/js/bootbox.locales.min.js') }}></script>
         {% endblock %}
     </head>
     <body>
