--- a/templates/courrier/received.html.twig
+++ b/templates/courrier/received.html.twig
@@ -117,7 +117,7 @@
             <div class="col-12 justify-content-center">
                 <div class="card card-trap"><div class="card-header">  <h1>Boites de receptions</h1></div>
                     <div class="card-body">
-                        <p>Total Courrier: {{ app.user.received|filter(courrier => courrier.isVerify == true)|length  }} </p>
+                        <p>Total Courrier: {{app.user.received|filter(courrier => courrier.isVerify == true)|length}} </p>
                         <table class="table table-striped table-bordered table_data">
                             <thead>
                             <tr>
@@ -129,12 +129,17 @@
                                 <th>Courrier</th>
                                 <th>Date</th>
                                 <th>Actions</th>
-                                 {% for courrier in app.user.received|filter(courrier => courrier.isVerify == true)%}
-                        {% if courrier.valider == 1 %}
-                            
-                                <th>valide</th>
-                            
-                        {% endif %}
+                                {% set break = false %}
+                                 {% for courrier in app.user.received|filter(courrier => courrier.isVerify == true) %}
+                                    {% if not break %}
+                                        {% if courrier.valider == 1 %}
+                                            <th>valide</th>
+                                            {% set break = true %}
+                                    
+                                        {% endif %}
+                                    {% endif %}
+
+
                         {% endfor %}
                             </tr>
                             </thead>
@@ -169,11 +174,19 @@
                                         {% set lfiles = files|length - 1 %}
                                        {# <a href="{{asset('Courrier/'~ files[lfiles]) }}" class="btn btn-dark">Telecharger</a>#}
                                     </td>
-                                        {% if courrier.valider == 1 %}
-                                   <td>
+                                       {% if courrier.valider == 1 %}
+                            <td>
                                 <img src="{{ asset('assets/svg/Checked.svg') }}" style="height:30px;">
-                                    </td>
-                                        {% endif %}
+                            </td>
+                           {% elseif courrier.valider == 0 %}
+                                            {% if courrier.nomC|last == ')' %}
+                                                <td>
+                                                    <img src="{{ asset('assets/svg/warning_115257.svg') }}" style="height:30px;">
+                                                </td>
+                                            {% endif %}
+                            {% endif %}
+
+                                    
                             </tr>
 
 
