--- a/templates/courrier/secondV.html.twig
+++ b/templates/courrier/secondV.html.twig
@@ -113,54 +113,83 @@
     </header>
 {% endblock %}
 {% block body %}
-    <h3 class="text-center font-weight-bold"> verification <final></final></h3>
-    <fieldset class="border" style="width:400px; height:auto;" >
-        <legend class="w-auto font-weight-bold ">infos sur le courrier </legend>
-        {{ courrier.notes }}
-    </fieldset>
+    
+   <fieldset class="border" style="width:400px; height:auto; margin-left:30px;" >
+              <legend class="w-auto font-weight-bold "><h3> A propos du courrier </h3> </legend>
+                        <p > <span class="font-weight-bold"> NOM Courrier : </span> {{ courrier.nomC }}  </p>
+                           <p > <span class="font-weight-bold"> Notes : </span> {{ courrier.notes }}  </p>
+                              <p > <span class="font-weight-bold"> Status : </span> {{ courrier.status }}  </p>
+                                 <p > <span class="font-weight-bold"> Destinataire : </span> {{ courrier.recipient.nom }}  </p>
+                      
 
-    <table style="margin: 50px;" class="table table-striped table-bordered table_data">
-    <thead></thead>
-        <tr>
+          </fieldset>
 
-            <th>Nom du courrier</th>
-            <th> N° BL </th>
-            <th>nom</th>
-            <th>prenom</th>
-            <th>numero</th>
-           {# <th>Valide 1</th> #}
-            <th>Valide</th>
-        </tr>
-    <tbody>
+    <div class="row text-center" style="margin-top: 30px">
+        <div class="col-12 justify-content-center">
+            <div class="card card-trap"><div class="card-header">  <h1>Verification</h1></div>
+                <div class="card-body">
+                    <table class="table table-striped table-bordered" id="data_table2">
+                <thead>
+                    <tr>
+                        <th>Nom du courrier</th>
+                        <th> N° BL </th>
+                        <th>nom</th>
+                        <th>prenom</th>
+                        <th>numero</th>
+                       <th class="d-none">Valide 1</th>
+                        <th>Valide</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {% for piece in upload %}
+                        <tr>
+                            <td>{{ piece.courier.nomC }} </td>
+                            <td> {{ piece.NBL }}</td>
+                            <td>{{ piece.nom }}</td>
+                            <td> {{ piece.prenom }} </td>
+                            <td> {{ piece.numero }} </td>
+                            <td class="d-none">
+                                {# afficher l'ancienne validation avec sa valeur true ou false #}
+                                {% set checked = piece.valide != 0 ? 'checked' : ''  %}
+                                <input type="checkbox" {{ checked }} class="form-control v1 "  data-ident="{{ piece.id }}" disabled  >
+                            </td>
+                            <td>
+                                <input type="checkbox" class="form-control v2 " data-id="{{ piece.id }}">
+                            </td>
+                        </tr>
+                    {% endfor %}
 
-    {% for piece in upload %}
-        <tr>
-            <td>{{ piece.courier.nomC }} </td>
-            <td> {{ piece.NBL }}</td>
-            <td>{{ piece.nom }}</td>
-            <td> {{ piece.prenom }} </td>
-            <td> {{ piece.numero }} </td>
+                </tbody>
+
+            </table>
+                </div>
+                <button  class="btn btn-success w-5" onClick="testValidation()"> Envoyer </button>
+            </div>
+        </div>
+    </div>
 
 
-            <td class="d-none">
-                {# afficher l'ancienne validation avec sa valeur true ou false #}
-                {% set checked = piece.valide != 0 ? 'checked' : ''  %}
-                <input type="checkbox" {{ checked }} class="form-control v1 "  data-ident="{{ piece.id }}" disabled  >
-
-            </td>
-            <td>
-                <input type="checkbox" class="form-control v2 " data-id="{{ piece.id }}">
-            </td>
-        </tr>
-    {% endfor %}
-    </tbody>
-    </table>
-
-
-    <button  class="btn btn-success" onClick="testValidation()"> Envoyer </button>
     <script>
-        //tester si valide 1 = valide 2 sinon mettre une alerte
 
+     $('#data_table2').DataTable({
+
+            "language": {
+                "lengthMenu": "Afficher _MENU_ données par pages",
+                "zeroRecords": "Nous n'avons rien trouvé - désolé",
+                "info": " page _PAGE_ sur _PAGES_",
+                "infoEmpty": "Aucun enregistrement disponibles",
+                "infoFiltered": "(Filtrer à partir de _MAX_ enregistrement)",
+                "search": "Rechercher:",
+                "paginate": {
+                    "first": "Premier",
+                    "last": "Dernier",
+                    "next": "Suivant",
+                    "previous": "Précedent"
+                },
+            },
+
+        });
+        //tester si valide 1 = valide 2 sinon mettre une alerte
         function testValidation() {
             //1 ere validation
             var first_tab = [];
@@ -219,14 +248,21 @@
                     method: 'POST',
                     data: {second_tab: second_tab,res: reponse},
                     success: function () {
+                        bootbox.alert('le courrier à été envoyé avec succès');
                         window.location.replace("{{path('send')}}");
-                    }
+                    },
+                  
+                    beforeSend: function(){
+                                    bootbox.dialog({ 
+                                    message: '<div class="text-center"><i class="fa fa-spin fa-spinner"></i> veuillez patientez...</div>', 
+                                    closeButton: false })}
+
                 })
             }
             else
                 {
                     console.log("tout n\'est pas ok");
-                    alert("le courrier n\' est pas ok")
+                     bootbox.alert('les validations ne sont pas correctes');
                 }
 
         }
