--- a/templates/courrier/verification.html.twig
+++ b/templates/courrier/verification.html.twig
@@ -114,25 +114,37 @@
 {% endblock %}
       {% block body %}
 
+  <fieldset class="border" style="width:400px; height:auto; margin-left:30px;" >
+              <legend class="w-auto font-weight-bold "><h4> A propos du courrier </h4> </legend>
+                        <p > <span class="font-weight-bold"> NOM Courrier : </span> {{ courrier.nomC }}  </p>
+                           <p > <span class="font-weight-bold"> Notes : </span> {{ courrier.notes }}  </p>
+                              <p > <span class="font-weight-bold"> Status : </span> {{ courrier.status }}  </p>
+                                 <p > <span class="font-weight-bold"> Destinataire : </span> {{ courrier.recipient.nom }}  </p>
+                      
 
-          <h3 class="text-center font-weight-bold"> verification des pieces</h3>
-          <fieldset class="border" style="width:400px; height:auto;" >
-              <legend class="w-auto font-weight-bold ">Notes sur ce courrier </legend>
-              {{ courrier.notes }}
           </fieldset>
 
-          <table style="margin: 50px;" class="table table-striped table-bordered table_data">
-              <thead></thead>
+          
+          <div class="row text-center" style="margin-top: 30px">
+              <div class="col-12 justify-content-center">
+                <div class="card card-trap"><div class="card-header">  <h1>vérification des pieces</h1></div>
+
+                    <div class="card-body">
+                        <button class="btn btn-primary add" onclick="ajoutLigne()"> Ajouter </button>
+                        <button class="btn btn-danger del" onclick="delLigne()" title ="Pour supprimer une ou plusieurs lignes cliquer sur une des cases à cocher correspondant de la colonne choix"> supprimer </button>
+                        <table style="margin-top:30px;" class="table table-striped table-bordered table_data" id="da_tables">
+              <thead>
               <tr>
-                  <th>  checkage </th>
-                  <th>Nom du courrier</th>
-                  <th> N° BL </th>
-                  <th>nom</th>
-                  <th>prenom</th>
-                  <th>numero</th>
-                  <th>Valide</th>
+                  <th class="text-center" style="width:30px" >  choix </th>
+                  <th class="text-center" style="width:200px" >Nom du courrier</th>
+                  <th class="text-center" style="width:200px" > N° BL </th>
+                  <th class="text-center" >nom</th>
+                  <th class="text-center">prenom</th>
+                  <th class="text-center" style="width:200px">numero</th>
+                  <th class="text-center"  style="width:60px;">Valide</th>
                   {# <th>Entrée</th> #}
               </tr>
+              </thead>
               <tbody>
 
               {#si on ne met pas dans la base mais seulement de l'affichage #}
@@ -158,11 +170,11 @@
               {% for piece in upload %}
                   <tr class="ligne_depart" data-id="{{ piece.id }}">
                       <td>  <input type="checkbox" class="del" name="select" data-ident="{{ piece.id }}"> </td>
-                      <td>{{ piece.courier.nomC }} </td>
-                      <td class="col_NBL"> <input type="text" class="form-control inp_nbl"> </td>
-                      <td>{{ piece.nom }}</td>
-                      <td> {{ piece.prenom }} </td>
-                      <td> {{ piece.numero }} </td>
+                      <td class="text-center">{{ piece.courier.nomC }} </td>
+                      <td class="col_NBL"> <input type="text" class="form-control inp_nbl" required> </td>
+                      <td class="text-center">{{ piece.nom }}</td>
+                      <td class="text-center"> {{ piece.prenom }} </td>
+                      <td class="text-center"> {{ piece.numero }} </td>
 
                       <td class="col_checkbox"> <input type="checkbox" class="form-control boxcheck" data-id="{{ piece.id }}" ></td>
 
@@ -179,15 +191,19 @@
               {% endfor %}
               </tbody>
           </table>
+                    </div>
 
-          <button class="btn btn-primary add" onclick="ajoutLigne()"> Ajouter </button>
-          <button class="btn btn-danger del" onclick="delLigne()"> supprimer </button>
+                </div>
+              </div>
+          </div>
+
+
           {#  buton enregistrer pour enregistrer les nouvelles valeurs#}
-          <a href="{{ path('second_verification',{id: courrier.id}) }}" class="btn btn-dark" onclick="Save()"> Suivant</a>
+          <a href="{{ path('second_verification',{id: courrier.id}) }}" class="btn btn-dark float-right" style="margin-right:20px;" onclick="Save()"> Suivant</a>
 
 
           <script>
-
+           
               //Ajout de ligne
               function ajoutLigne()
               {
